<resources>
    <string name="app_name">Simple Sensor Management System</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>30 seconds</item>
        <item>1 minute</item>
        <item>2 minutes</item>
        <item>5 minutes</item>
        <item>10 minutes</item>
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>30000</item>
        <item>60000</item>
        <item>120000</item>
        <item>300000</item>
        <item>600000</item>
        <item>900000</item>
        <item>1800000</item>
        <item>3600000</item>
        <item>10800000</item>
        <item>21600000</item>
    </string-array>


    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="exit_action">Exit</string>
    <string name="settings">Settings</string>
    <string name="start_search">Start Searching</string>
    <string name="stop_search">Stop Searching</string>
    <string name="refresh">Refresh</string>
    <string name="title_activity_device">DeviceActivity</string>
    <string name="action_settings">Settings</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="show_device_info">SHOW DEVICE INFO</string>
    <string name="show_current_readings">SHOW CURRENT READINGS</string>
    <string name="start_periodic_task">START PERIODIC TASK</string>
    <string name="stop_periodic_task">STOP PERIODIC TASK</string>
    <string name="show_reading_from_database">SHOW READINGS FROM DATABASE</string>
    <string name="show_charts">SHOW CHARTS</string>
    <string name="show_temperature_chart">SHOW TEMPERATURE CHART</string>
    <string name="show_humidity_chart">SHOW HUMIDITY CHART</string>
    <string name="pref_show_toast">Show Toast notifications</string>
    <string name="widget_humidity">Humidity:</string>
    <string name="widget_temperature">Temperature:</string>
    <string name="widget_date">Date:</string>
    <string name="widget_device">Device ID:</string>
    <string name="data_id">Reading ID:</string>
    <string name="data_update">Update</string>
    <string name="data_remove">Remove</string>
    <string name="data_date">Date:</string>
    <string name="data_sensorID">Device ID:</string>
    <string name="data_humidity">Humidity:</string>
    <string name="data_temperature">Temperature:</string>
    <string name="notif_new_data">There is new data in database</string>
    <string name="collector_all_data">GET ALL DATA</string>
    <string name="collector_get_count">GET LAST READINGS</string>
    <string name="collector_get_since">GET READINGS SINCE ...</string>
    <string name="number_picker_title">Choose how much data want to download</string>
    <string name="download_ok">Download</string>
    <string name="download_cancel">Cancel</string>
    <string name="download_next">Next</string>
    <string name="sensor_dialog_id">Row ID: </string>
    <string name="sensor_dialog_addr">Downloaded from device</string>
    <string name="sensor_device_id">Device ID: </string>
    <string name="sensor_dialog_date">Date: </string>
    <string name="sensor_dialog_temperature">Temperature: </string>
    <string name="sensor_dialog_humidity">Humidity: </string>
    <string name="main_activity_dev">Available devices:</string>
    <string name="chart_temperature">Temperature</string>
    <string name="chart_humidity">Humidity</string>
    <string name="stringToggleValues">Toggle Values</string>
    <string name="stringToggleFilled">Toggle Filled</string>
    <string name="stringToggleCircles">Toggle Circles</string>
    <string name="stringToggleCubic">Toggle Cubic</string>
    <string name="stringToggleStepped">Toggle Stepped</string>
    <string name="stringToggleHorizontalCubic">Toggle Horizontal Cubic</string>
    <string name="stringToggleHighlight">Toggle Highlight</string>
    <string name="stringAnimateX">Animate X</string>
    <string name="stringAnimateY">Animate Y</string>
    <string name="stringAnimateXY">Animate XY</string>
    <string name="stringToggleAdjustXLegend">Toggle AdjustXLegend</string>
    <string name="stringSave">Save to SD-Card</string>
    <string name="stringTogglePinch">Toggle PinchZoom</string>
    <string name="stringToggleAutoScaleMinMax">Toggle auto scale min/max</string>
    <string name="save_success">Saving SUCCESSFUL!</string>
    <string name="save_failed">Saving FAILED!</string>
    <string name="device_info_dialog_id">Device ID: </string>
    <string name="device_info_dialog_name">Name: </string>
    <string name="device_info_dialog_loc">Localization: </string>
    <string name="string_loading">Loading data</string>
    <string name="string_starting">Starting loading</string>
    <string name="string_download">Downloaded: </string>
    <string name="string_of"> of </string>
    <string name="string_adding">. Starting adding to database...</string>
    <string name="string_inserted">Inserted to database: </string>
    <string name="string_notBounded">Service NOT bounded</string>
    <string name="string_found">Found: </string>
    <string name="string_searchStarted">Searching Started</string>
    <string name="string_searchStopped">Searching Stopped</string>
    <string name="string_added">Added: </string>
    <string name="alert_title">Warning!</string>
    <string name="string_deleteAll">This will delete all existing data in database. Do You want to continue?</string>
    <string name="string_lowDatabaseCount">Database is empty. Do you want to download data?</string>
    <string name="string_noDatabaseCount">Database is empty. You have to download data form collector or sensor.</string>
    <string name="string_noWifi">There is no WiFi connection. Please check connection and try again.</string>
    <string name="string_downloadError">There was no response from device. Please check connection and try again.</string>
    <string name="alert_info">Information</string>
    <string name="alert_downloadOK">Adding data to database successful</string>
    <string name="widget_noData">No data</string>
    <string name="main_conn">Connecting</string>
    <string name="main_connWait">Please wait for connect to sensor</string>
    <string name="alert_warning">Warning!</string>
    <string name="alert_ok">OK</string>
    <string name="alert_threadStartedOK">Periodic task started successful</string>
    <string name="alert_threadStartedError">Periodic task already exist</string>
    <string name="alert_threadStoppedOK">Periodic task stopped successful</string>
    <string name="alert_threadStoppedError">Periodic task does not exist</string>
    <string name="alert_notBounded">Service is not bounded</string>

</resources>
