<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/actionToggleValues"
        android:title="@string/stringToggleValues">
    </item>
    <item
        android:id="@+id/actionToggleFilled"
        android:title="@string/stringToggleFilled">
    </item>
    <item
        android:id="@+id/actionToggleCircles"
        android:title="@string/stringToggleCircles">
    </item>
    <item
        android:id="@+id/actionToggleCubic"
        android:title="@string/stringToggleCubic">
    </item>
    <item
        android:id="@+id/actionToggleStepped"
        android:title="@string/stringToggleStepped">
    </item>
    <item
        android:id="@+id/actionToggleHorizontalCubic"
        android:title="@string/stringToggleHorizontalCubic">
    </item>
    <item
        android:id="@+id/actionToggleHighlight"
        android:title="@string/stringToggleHighlight">
    </item>
    <item
        android:id="@+id/animateX"
        android:title="@string/stringAnimateX">
    </item>
    <item
        android:id="@+id/animateY"
        android:title="@string/stringAnimateY">
    </item>
    <item
        android:id="@+id/animateXY"
        android:title="@string/stringAnimateXY">
    </item>
    <item
        android:id="@+id/actionToggleAdjustXLegend"
        android:title="@string/stringToggleAdjustXLegend">
    </item>
    <item
        android:id="@+id/actionSave"
        android:title="@string/stringSave">
    </item>
    <item
        android:id="@+id/actionTogglePinch"
        android:title="@string/stringTogglePinch">
    </item>
    <item
        android:id="@+id/actionToggleAutoScaleMinMax"
        android:title="@string/stringToggleAutoScaleMinMax">
    </item>
</menu>