<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" >
    <item
        android:id="@+id/action_start_search"
        android:title="@string/start_search"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_stop_search"
        android:title="@string/stop_search"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_refresh"
        android:title="@string/refresh"
        app:showAsAction="ifRoom"
        app:icon="@drawable/ic_sync_black_24dp" />
    <item
        android:id="@+id/action_settings"
        android:title="@string/settings"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_exit"
        android:title="@string/exit_action"
        app:showAsAction="never"/>
</menu>