<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="lab.android.bartosz.ssms.SensorReadingDetailFragment">

    <!-- TODO: Update blank fragment layout -->

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/data_update"
        android:id="@+id/updateDataBtn"
        android:layout_gravity="left|bottom"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/data_remove"
        android:id="@+id/removeDataBtn"
        android:layout_gravity="right|bottom"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/data_id"
        android:id="@+id/sensorDataID"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/data_date"
        android:id="@+id/textView"
        android:layout_below="@+id/readingIDTextView"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Text"
        android:id="@+id/readingIDTextView"
        android:layout_below="@+id/sensorDataID"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Text"
        android:id="@+id/readingDateTextView"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/data_sensorID"
        android:id="@+id/textView4"
        android:layout_below="@+id/readingDateTextView"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/readingDeviceIDEditText"
        android:layout_below="@+id/textView4"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/readingTemperatureEditText"
        android:layout_below="@+id/textView2"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/readingDeviceIDEditText" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/data_temperature"
        android:id="@+id/textView2"
        android:layout_below="@+id/readingDeviceIDEditText"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/readingHumidityEditText"
        android:layout_alignTop="@+id/readingTemperatureEditText"
        android:layout_toEndOf="@+id/readingTemperatureEditText" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/data_humidity"
        android:id="@+id/textView3"
        android:layout_above="@+id/readingHumidityEditText"
        android:layout_toEndOf="@+id/readingDeviceIDEditText" />

</RelativeLayout>
