<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/widget_bg"
    android:paddingTop="5dp"
    android:paddingBottom="5dp"
    android:paddingLeft="15dp"
    android:paddingRight="15dp"
    android:id="@+id/widgetLayout">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/widget_device"
        android:id="@+id/devTextView"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="#ffffff" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/widget_noData"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/widgetDeviceIDTextView"
        android:layout_below="@+id/devTextView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="#ffffff"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/widget_temperature"
        android:id="@+id/tempTextView"
        android:textColor="#ffffffff"
        android:layout_below="@+id/widgetDeviceIDTextView"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/widget_humidity"
        android:id="@+id/humidityTextView"
        android:layout_alignTop="@+id/tempTextView"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textColor="#ffffffff" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/widget_noData"
        android:id="@+id/widgetTemperatureTextView"
        android:textColor="#ffffff"
        android:layout_below="@+id/tempTextView"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/widget_noData"
        android:id="@+id/widgetHumidityTextView"
        android:layout_below="@+id/humidityTextView"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textColor="#ffffff"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/widget_date"
        android:id="@+id/dateTextView"
        android:textColor="#ffffff"
        android:layout_alignParentTop="true"
        android:layout_alignEnd="@+id/humidityTextView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/widget_noData"
        android:id="@+id/widgetDateTextView"
        android:textColor="#ffffff"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/dateTextView" />



</RelativeLayout>